# sdl-scratch

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
main_program/: CMakeLists.txt  Session.vim
main_program/include/: Log.h  MainGame.h
main_program/include/IO/: BasicIO.h
main_program/include/Video/: Shader.h  Sprite.h  Texture.h  TextureCache.h  TextureManager.h  Vertex.h
main_program/lib/universal/lodepng/: picopng.h
main_program/shaders/: shader.frag  shader.vert  shader2.frag  shader2.vert
main_program/src/: MainGame.cpp  main.cpp
main_program/src/Video/: Shader.cpp  Sprite.cpp  TextureManager.cpp
sample_game/: .CMakeLists.txt.un~  .clang  .exrc  CMakeLists.txt  Session.vim
sample_game/include/: .MainGame.h.un~  .MainGame.hxx.un~  MainGame.h  MainGame.hxx  Player.h  Projectile.h
sample_game/shaders/: frag.spv  shader.frag  shader.vert
sample_game/src/: .MainGame.cpp.un~  .main.cpp.un~  MainGame.cpp  Projectile.cpp  main.cpp
tewi/: CMakeLists.txt  Session.vim
tewi/include/: GameCommon.hpp  Window.h  Window.h.gch
tewi/include/Utils/: Clock.h  TickTimer.h
tewi/include/Video/: Uniform.h
tewi/src/: Window.cpp
tewi/src/Utils/: Clock.cpp  TickTimer.cpp
tewi/src/Video/: Sprite.cpp  TextureCache.cpp  Window.cpp
win32_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  andryDoesSomethingWhileListeningToWeirdMusic.sln  cmake_install.cmake
win32_build/main_program/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  OpenGL_test.sln  OpenGL_test.vcxproj  OpenGL_test.vcxproj.filters  cmake_install.cmake
